--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	{{ content }}
+	<div class="container">
+		{{ content }}
+	</div>
 </body>
 </html>
