Adds connect and my work sections with links.

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,4 @@
 ---
 ---
 
-@import "animate", "layout", "logo";
-
-body {
-	background-color: #ecf0f1;
-}
+@import "variables", "animate", "layout", "media", "logo";
