--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,73 @@
+body {
+	background-color: $bodyBackgroundColor;
+	font-family: 'Roboto', sans-serif;
+}
+
+section {
+	margin-top: 4em;
+}
+
 .container {
 	box-sizing: border-box;
 	margin: 0 auto;
 	max-width: 1280px;
 	padding: 1em;
+	text-align: center;
+}
+
+.links {
+	padding: 0;
+
+	> li {
+		display: inline-block;
+		margin: 20px;
+		vertical-align: middle;
+		width: 150px;
+
+		img {
+			width: 100%;
+		}
+	}
+
+	a {
+		color: black;
+		display: block;
+		overflow: hidden;
+		position: relative;
+
+		&:hover {
+			&::after {
+				opacity: 1;
+			}
+
+			.details {
+				margin-top: 0;
+			}
+		}
+
+		&::after {
+			background-color: rgba($bodyBackgroundColor, 0.5);
+			bottom: 0;
+			content: '';
+			left: 0;
+			opacity: 0;
+			position: absolute;
+			right: 0;
+			top: 0;
+			transition: 0.3s opacity ease-in-out;
+		}
+
+		.details {
+			font-weight: bold;
+			left: 0;
+			margin-top: 100%;
+			position: absolute;
+			right: 0;
+			text-align: center;
+			top: 50%;
+			transform: translateY(-50%);
+			transition: 0.3s margin-top ease-in-out;
+			z-index: 100;
+		}
+	}
 }
