--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,7 +47,7 @@ section {
 		}
 
 		&::after {
-			background-color: rgba($bodyBackgroundColor, 0.5);
+			background-color: rgba($bodyBackgroundColor, 0.8);
 			bottom: 0;
 			content: '';
 			left: 0;
@@ -59,7 +59,6 @@ section {
 		}
 
 		.details {
-			font-weight: bold;
 			left: 0;
 			margin-top: 100%;
 			position: absolute;
@@ -69,6 +68,12 @@ section {
 			transform: translateY(-50%);
 			transition: 0.3s margin-top ease-in-out;
 			z-index: 100;
+		}
+
+		.details-title {
+			font-size: 1.3333em;
+			font-weight: bold;
+			margin-bottom: 0;
 		}
 	}
 }
